--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>VVordle - a Wordle clone with Vue.js</title>
+    <title>Tomble - A Locked Tomb Word Game</title>
   </head>
   <body>
     <div id="app"></div>
